teleport to winner, show eliminated to winner,